# shopping

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  compose.dev.yml  compose.sh  compose.yml  pyproject.toml
api/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
api/src/: alembic.ini  pytest.ini
api/src/alembic/: env.py
api/src/app/: database.py  envs.py  exceptions.py  main.py  middleware.py  route_exceptions.py  schemas.py
api/src/scripts/: alembic.sh  clear_db.py  refresh_db.sh
api/src/tests/: conftest.py  fixtures.py
docker/: Dockerfile-nextjs  init_data  shell
docker/nginx/: nginx.dev.conf  nginx.prod.conf
docker/postgresql/: init.sql
frontend/: package-lock.json  package.json
frontend/src/app/: Header.tsx  layout.tsx
src/: alembic.ini
src/alembic/versions/: 7f3afa6964f1_add_purchase_amount.py  9c3b1e040740_initial_tables.py
src/app/: configs.py  database.py  main.py  middleware.py  route_exceptions.py  schemas.py
src/app/auth/: routes.py
src/app/helpers/: enums.py  functions.py  responses.py
src/app/items/: routes.py
src/app/models/: __init__.py  base.py  item.py  purchase.py  store.py
src/app/receipts/: routes.py
src/app/repositories/: item_repository.py  purchase_repository.py  receipt_repository.py  store_repository.py
src/app/static/: scripts.js  styles.css
src/app/stores/: routes.py
src/app/templates/: base.html  home.html  item.html  item_edit.html  items.html  login.html  stores.html  (+4 more)
src/scripts/: alembic.sh  populate_db.py  refresh_db.sh
src/tests/: conftest.py  generators.py
(+72 files in other folders)
